Update installation routine
- Added database root user and root password in installation page
so sqStorage User and Database creation is performed.
- Ensure that "dba.php" (database access) is correctly based on
"dba-example.php".
- Avoid creation of "dba.php" when "install.php" is openend the first time
- Updated language files, contributers
- Updated the language files to reflect the current state.
- Updated information on the welcome page.
- Add/updated new translations for English and Polish languages.

--- a/welcome_lang/de.html
+++ b/welcome_lang/de.html
@@ -72,37 +72,37 @@
             <li>
                 <p>
                     <span class="name">Aleksandra F.</span><a href="https://djomtka.com">djomtka.com</a><br>
-                    Polish translation
+                    Polnische Übersetzung bevor 22.03.2025
                 </p>
             </li>
             <li>
                 <p>
                     <span class="name">Dexter H. C.</span><a href="https://ngb.to">ngb.to</a><br>
-                    Design feedback and pentesting
+                    Design Feedback und Testing
                 </p>
             </li>
             <li>
                 <p>
                     <span class="name">helix</span><br>
-                    Logo design and additional feedback
+                    Logo Design und zusätzliches Feedback
                 </p>
             </li>
             <li>
                 <p>
                     <span class="name">Jan R.</span><a href="https://dwrox.net">dwrox.net</a><br>
-                    Project owner, initial and ongoing coding
+                    Project Inhaber, initiale Entwicklung / Pflege
                 </p>
             </li>
             <li>
                 <p>
                     <span class="name">Stephan L.</span><a href="https://lauermann-it.de">lauermann-it.de</a><br>
-                    Testing and feedback
+                    Tests und Feedback
                 </p>
             </li>
             <li>
                 <p>
                     <span class="name">Volker B.</span><a href="https://schnoog.eu/">schnoog.eu</a><br>
-                    Coding of API, user system, smarty templating, translation and much much more
+                    API Entwickler, Benutzerverwaltung, Smarty, Übersetzungen und mehr
                 </p>
             </li>
         </ul>
