--- a/welcome_lang/en.html
+++ b/welcome_lang/en.html
@@ -74,7 +74,7 @@
             <li>
                 <p>
                     <span class="name">Aleksandra F.</span><a href="https://djomtka.com">djomtka.com</a><br>
-                    Polish translation
+                    Polish translation before 03/22/2025
                 </p>
             </li>
             <li>
