--- a/welcome_lang/de.html
+++ b/welcome_lang/de.html
@@ -95,7 +95,7 @@
             </li>
             <li>
                 <p>
-                    <span class="name">Stephan L.</span><a href="https://lauermann-it.de">lauermann-it.de</a><br>
+                    <span class="name">Stephan L.</span><a href="https://stephanlauermann.de">stephanlauermann.de</a><br>
                     Tests und Feedback
                 </p>
             </li>
