--- a/welcome_lang/en.html
+++ b/welcome_lang/en.html
@@ -97,7 +97,7 @@
             </li>
             <li>
                 <p>
-                    <span class="name">Stephan L.</span><a href="https://lauermann-it.de">lauermann-it.de</a><br>
+                    <span class="name">Stephan L.</span><a href="https://stephanlauermann.de">stephanlauermann.de</a><br>
                     Testing and feedback
                 </p>
             </li>
