--- a/welcome_lang/de.html
+++ b/welcome_lang/de.html
@@ -96,7 +96,7 @@
             <li>
                 <p>
                     <span class="name">Stephan L.</span><a href="https://stephanlauermann.de">stephanlauermann.de</a><br>
-                    Tests und Feedback
+                    Tests, Feedback, Poweruser
                 </p>
             </li>
             <li>
