--- a/welcome_lang/en.html
+++ b/welcome_lang/en.html
@@ -98,7 +98,7 @@
             <li>
                 <p>
                     <span class="name">Stephan L.</span><a href="https://stephanlauermann.de">stephanlauermann.de</a><br>
-                    Testing and feedback
+                    Testing, feedback, Power user
                 </p>
             </li>
             <li>
